exports[`StartStopButton is active when the clock that is running 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "#34495e",
      "border": 0,
      "color": "#ecf0f1",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    data-test-id="Pause"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m23.4 8.4h6.6v23.2h-6.6v-23.2z m-13.4 23.2v-23.2h6.6v23.2h-6.6z" />
    </g>
  </svg>
</button>
`;

exports[`StartStopButton renders a label that reflects a clock that has started 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#bdc3c7",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    data-test-id="PlayArrow"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m13.4 8.4l18.2 11.6-18.2 11.6v-23.2z" />
    </g>
  </svg>
</button>
`;

exports[`StartStopButton renders a label that reflects a clock that is running 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "#34495e",
      "border": 0,
      "color": "#ecf0f1",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    data-test-id="Pause"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m23.4 8.4h6.6v23.2h-6.6v-23.2z m-13.4 23.2v-23.2h6.6v23.2h-6.6z" />
    </g>
  </svg>
</button>
`;

exports[`StartStopButton renders the component 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#bdc3c7",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    data-test-id="PlayArrow"
    fill="currentColor"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "color": undefined,
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m13.4 8.4l18.2 11.6-18.2 11.6v-23.2z" />
    </g>
  </svg>
</button>
`;
